--- a/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
+++ b/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
@@ -591,7 +591,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="2" column="1" colspan="3">
            <widget class="QLineEdit" name="map_location">
             <property name="minimumSize">
              <size>
@@ -601,7 +601,7 @@
             </property>
             <property name="maximumSize">
              <size>
-              <width>111</width>
+              <width>300</width>
               <height>22</height>
              </size>
             </property>
