--- a/Projects/CoX/Utilities/SEGSAdmin/SEGSAdminTool.ui
+++ b/Projects/CoX/Utilities/SEGSAdmin/SEGSAdminTool.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1041</width>
-    <height>574</height>
+    <height>595</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -133,7 +133,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>344</width>
+        <width>392</width>
         <height>20</height>
        </size>
       </property>
@@ -169,13 +169,13 @@
      <widget class="QLabel" name="segs_admin_version">
       <property name="minimumSize">
        <size>
-        <width>40</width>
+        <width>61</width>
         <height>19</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>40</width>
+        <width>61</width>
         <height>19</height>
        </size>
       </property>
@@ -190,11 +190,21 @@
        <string notr="true">color: rgb(0, 170, 255)</string>
       </property>
       <property name="text">
-       <string>0.5.0</string>
+       <string>x.x.x</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1" rowspan="5" colspan="5">
+    <item row="0" column="6">
+     <widget class="QPushButton" name="update_detail">
+      <property name="text">
+       <string/>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" rowspan="5" colspan="6">
      <widget class="QGroupBox" name="app_output">
       <property name="minimumSize">
        <size>
@@ -277,7 +287,17 @@
        <string notr="true">color: rgb(0, 170, 0);</string>
       </property>
       <property name="text">
-       <string>Start Server</string>
+       <string> Start Server</string>
+      </property>
+      <property name="icon">
+       <iconset resource="resources.qrc">
+        <normaloff>:/icons/play.svg</normaloff>:/icons/play.svg</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>21</width>
+        <height>21</height>
+       </size>
       </property>
      </widget>
     </item>
@@ -304,6 +324,22 @@
        <string>Server Setup</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="1">
+        <widget class="QLabel" name="icon_status_config">
+         <property name="maximumSize">
+          <size>
+           <width>29</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::RichText</enum>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="gen_config_file">
          <property name="minimumSize">
@@ -323,51 +359,30 @@
            <pointsize>9</pointsize>
           </font>
          </property>
-         <property name="text">
-          <string>Generate Config File</string>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
          </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="icon_status_config">
-         <property name="maximumSize">
-          <size>
-           <width>29</width>
-           <height>32</height>
-          </size>
+         <property name="autoFillBackground">
+          <bool>false</bool>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>   Generate Config File</string>
          </property>
-         <property name="textFormat">
-          <enum>Qt::RichText</enum>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/file-plus.svg</normaloff>:/icons/file-plus.svg</iconset>
          </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QPushButton" name="runDBTool">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="minimumSize">
+         <property name="iconSize">
           <size>
-           <width>124</width>
-           <height>30</height>
+           <width>18</width>
+           <height>18</height>
           </size>
          </property>
-         <property name="maximumSize">
-          <size>
-           <width>300</width>
-           <height>30</height>
-          </size>
+         <property name="autoRepeat">
+          <bool>false</bool>
          </property>
-         <property name="font">
-          <font>
-           <pointsize>9</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Create Databases</string>
+         <property name="autoExclusive">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -380,7 +395,7 @@
           </size>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string/>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -410,7 +425,54 @@
           </font>
          </property>
          <property name="text">
-          <string>Setup CoH Data Files</string>
+          <string>   Setup CoH Data Files</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/settings.svg</normaloff>:/icons/settings.svg</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>18</width>
+           <height>18</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QPushButton" name="runDBTool">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>124</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>300</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>   Create New Databases</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/database.svg</normaloff>:/icons/database.svg</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>18</width>
+           <height>18</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -423,7 +485,7 @@
           </size>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string/>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -479,7 +541,17 @@
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Adds a new user account&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
-          <string>Settings and Logging</string>
+          <string>   Settings and Logging</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/sliders.svg</normaloff>:/icons/sliders.svg</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>18</width>
+           <height>18</height>
+          </size>
          </property>
          <property name="checkable">
           <bool>false</bool>
@@ -548,9 +620,22 @@
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Adds a new user account&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
-          <string>Add User Account</string>
+          <string>   Add User Account</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/users.svg</normaloff>:/icons/users.svg</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>18</width>
+           <height>18</height>
+          </size>
          </property>
          <property name="checkable">
+          <bool>false</bool>
+         </property>
+         <property name="autoExclusive">
           <bool>false</bool>
          </property>
         </widget>
@@ -574,6 +659,28 @@
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1041</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
+   <addaction name="menuHelp"/>
+  </widget>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>authserver_start</tabstop>
