Splash screen, OpenSSL error handling, Pixmaps and VersionInfo
- Add updated splash screen
- Add error handling if OpenSSL dll's are missing
- Rehide console window on Windows OS

Pixmaps and versioninfo

Now using pixmaps for alert triangle and checks and reading from version.h for segs version number and update functionality

Updated app icon

Add updated error handling for openSSL

Add default arguments for releasesReadyToRead()

--- a/Projects/CoX/Utilities/SEGSAdmin/AboutDialog.ui
+++ b/Projects/CoX/Utilities/SEGSAdmin/AboutDialog.ui
@@ -20,7 +20,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="resources.qrc">:/logo/logo4.png</pixmap>
+      <pixmap resource="resources.qrc">:/logo/Resources/logo4.png</pixmap>
      </property>
     </widget>
    </item>
