--- a/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
+++ b/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>849</width>
-    <height>451</height>
+    <width>870</width>
+    <height>462</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1110,9 +1110,8 @@
       <string> Auto Populate IPs</string>
      </property>
      <property name="icon">
-      <iconset>
-       <normalon>:/icons/icon_lookup.png</normalon>
-      </iconset>
+      <iconset resource="resources.qrc">
+       <normaloff>:/icons/Resources/icon_lookup.png</normaloff>:/icons/Resources/icon_lookup.png</iconset>
      </property>
      <property name="flat">
       <bool>false</bool>
@@ -1203,7 +1202,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
