--- a/Projects/CoX/Utilities/SEGSAdmin/resources.qrc
+++ b/Projects/CoX/Utilities/SEGSAdmin/resources.qrc
@@ -1,23 +1,23 @@
 <RCC>
     <qresource prefix="/logo">
-        <file>logo3.png</file>
-        <file>logo4.png</file>
-        <file>segs_splash_1.png</file>
+        <file>Resources/logo3.png</file>
+        <file>Resources/logo4.png</file>
+        <file>Resources/splash-lg.png</file>
     </qresource>
     <qresource prefix="/icons">
-        <file>segs.bmp</file>
-        <file>icon_lookup.png</file>
-        <file>save.svg</file>
-        <file>database.svg</file>
-        <file>file-plus.svg</file>
-        <file>settings.svg</file>
-        <file>sliders.svg</file>
-        <file>users.svg</file>
-        <file>play.svg</file>
-        <file>square.svg</file>
-        <file>download.svg</file>
-        <file>check.svg</file>
-        <file>alert-triangle.svg</file>
+        <file>Resources/icon_lookup.png</file>
+        <file>Resources/database.svg</file>
+        <file>Resources/file-plus.svg</file>
+        <file>Resources/save.svg</file>
+        <file>Resources/settings.svg</file>
+        <file>Resources/sliders.svg</file>
+        <file>Resources/users.svg</file>
+        <file>Resources/check.svg</file>
+        <file>Resources/download.svg</file>
+        <file>Resources/play.svg</file>
+        <file>Resources/square.svg</file>
+        <file>Resources/alert-triangle.svg</file>
+        <file>Resources/app-icon.svg</file>
     </qresource>
     <qresource prefix="/fonts">
         <file>dejavusanscondensed.ttf</file>
