Add "logTrades/log.trades" logger.
Also add missing checkbox for "logPowers/log.powers" in admin gui.

--- a/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
+++ b/Projects/CoX/Utilities/SEGSAdmin/SettingsDialog.ui
@@ -38,7 +38,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="tabsClosable">
       <bool>false</bool>
@@ -1085,6 +1085,30 @@
          </property>
          <property name="text">
           <string>Looking for Group</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1" colspan="2">
+        <widget class="QCheckBox" name="log_powers">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Powers</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1" colspan="2">
+        <widget class="QCheckBox" name="log_trades">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Trades</string>
          </property>
         </widget>
        </item>
